# REopengling

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp_config.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
src/opengling/: __init__.py
src/opengling/cli/: __init__.py  main.py
src/opengling/core/: __init__.py  autozoom.py  bad_takes.py  bootstrap.py  breath.py  config_file.py  filler.py  models.py  noise.py  processor.py  project.py  render.py  silence.py  transcription.py  url_downloader.py  youtube.py
src/opengling/export/: __init__.py  captions.py  davinci.py  fcpxml.py  premiere.py
src/opengling/mcp_server/: __init__.py  server.py
src/opengling/web/: __init__.py  app.py
tests/: conftest.py  test_bad_takes.py  test_captions.py  test_filler.py  test_models.py  test_project.py  test_silence.py  test_url_downloader.py  test_web.py
